@@ -1,3 +1,12 @@
+2010-03-08  Peter Penz  <ppenz@openismus.com>
+
+	Fix the build with exceptions disabled.
+
+	* glom/libglom/document/bakery/document_xml.cc:
+	* glom/mode_design/iso_codes.cc: The exception handling is enabled by the
+    define LIBXMLPP_EXCEPTIONS_ENABLED. But this is a typo, as libxml++ defines
+    LIBXMLCPP_EXCEPTIONS_ENABLED.
+
 2010-02-08  Peter Penz <ppenz@openismus.com>
 
   libglom: Fix build issue for Maemo.
